3821B1FI2/1_gelu_omp/zawadowski_jan/log.txt
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp: In function ‘std::vector<float> GeluOMP(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp:7:10: error: ‘size_t’ was not declared in this scope; did you mean ‘std::size_t’?
    7 |     for (size_t i = 0; i < input.size(); ++i) {
      |          ^~~~~~
      |          std::size_t
In file included from /usr/include/c++/11/bits/stl_algobase.h:59,
                 from /usr/include/c++/11/vector:60,
                 from /home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/include/gelu_omp.h:4,
                 from /home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp:1:
/usr/include/x86_64-linux-gnu/c++/11/bits/c++config.h:280:33: note: ‘std::size_t’ declared here
  280 |   typedef __SIZE_TYPE__         size_t;
      |                                 ^~~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp:7:16: error: expected ‘;’ before ‘i’
    7 |     for (size_t i = 0; i < input.size(); ++i) {
      |                ^~
      |                ;
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp:7:17: error: ‘i’ was not declared in this scope
    7 |     for (size_t i = 0; i < input.size(); ++i) {
      |                 ^
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp:7:40: error: expected ‘)’ before ‘;’ token
    7 |     for (size_t i = 0; i < input.size(); ++i) {
      |         ~                              ^
      |                                        )
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp:7:5: error: expected iteration declaration or initialization
    7 |     for (size_t i = 0; i < input.size(); ++i) {
      |     ^~~
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/1_gelu_omp/zawadowski_jan/gelu_omp.cpp:7:44: error: ‘i’ was not declared in this scope
    7 |     for (size_t i = 0; i < input.size(); ++i) {
      |                                            ^
